Fix for #source stretching too wide

--- a/Clients/Web/index.css
+++ b/Clients/Web/index.css
@@ -16,6 +16,9 @@ body {
     padding: 0;
     border: 0 solid black;
     width: 100%;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #source {
